Frontend_v2: Fix leaderboard rank text alignment as justified in the challenge cards(#2954)

--- a/frontend_v2/src/styles/base.scss
+++ b/frontend_v2/src/styles/base.scss
@@ -424,6 +424,7 @@ mat-chip {
   border-radius: 4px;
   overflow: hidden;
   box-shadow: 0px 0px 12px $shadow-black;
+  text-align: justify;
 }
 
 .ev-md-container {
